fix overlap

--- a/src/sass/app/_common/layout/layouts.scss
+++ b/src/sass/app/_common/layout/layouts.scss
@@ -204,6 +204,8 @@
             }
             div.ciq-asset-information {
                 z-index: 0;
+                top: 0;
+                left: 0;
             }
             div.stx_jump_today.home > svg {
                 top: 6px;
